--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" ng-app="courseraAssignment1">
   <head>
-    <meta charset="utf-8">
-    <title>Coursera Assignment 1</title>
+    <title>Lunch Checker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <style>
+      .message { font-size: 1.3em; font-weight: bold; }
+    </style>
+    <script src="js/angular.min.js" charset="utf-8"></script>
+    <script src="js/app.js" charset="utf-8"></script>
+
   </head>
-  <body>
-    <h1>Assignment 1</h1>
-  </body>
+<body>
+   <div class="container" ng-controller="courseraAssignmentController">
+     <h1>Lunch Checker</h1>
+
+         <div class="form-group">
+             <input id="lunch-menu" type="text" ng-model="items"
+             placeholder="list comma separated dishes you usually have for lunch"
+             class="form-control">
+         </div>
+         <div class="form-group">
+             <button class="btn btn-default"  ng-click="checkValidItems();">Check If Too Much</button>
+         </div>
+         <div class="form-group message">
+           <!-- Your message can go here. -->
+           {{msg}}
+         </div>
+   </div>
+
+</body>
 </html>
